# polyfit-residuals

./: .gitignore  BENCHMARKS.md  Cargo.toml  LICENSE  README.md
benches/: bench.rs  large_data.rs  small_data.rs
src/: lib.rs  poly.rs  reference.py
