[package]
name = "polyfit-residuals"
version = "0.6.5"
edition = "2021"
description = "Efficiently calculate the residual errors (in the least squares sense) of all polynomial models (up to some degree) for a given dataset and compute least-squares polynomial fits."
authors = ["Stefan Volz"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SV-97/polyfit-residuals/"
keywords = [
    "mathematics",
    "regression",
    "statistics",
    "algorithms",
    "polynomial",
    # crates.io only supports five keywords
    # "polyfit",
    # "polynomial fitting",
    # "math",
]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
itertools = "0.14.0"
ndarray = "0.16.1"
num-traits = "0.2.15"
rayon = { version = "1.6.1", optional = true }

[dev-dependencies]
approx = "0.5.1"
ndarray = { version = "0.16.1", features = ["approx"] }
criterion = "0.5.1"
maybe-debug = "0.1.0"

[[bench]]
name = "bench"
harness = false

[features]
default = ["parallel_rayon"]
# Add rayon-based parallel implementation.
parallel_rayon = ["dep:rayon"]
nightly-only = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
